# jinja2-github

./: .gitignore  .pre-commit-config.yaml  README.rst  jinja2_github.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_jinja2_github.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
