[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "jinja2_github"
author = "Jean-Christophe Fillion-Robin"
author-email = "jchris.fillionr@kitware.com"
description-file = "README.rst"
home-page = "https://github.com/jcfr/jinja2-github"
requires = [
    "pygithub",
    "jinja2"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git"
]

