[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "jinja2_github"
author = "Jean-Christophe Fillion-Robin"
author-email = "jchris.fillionr@kitware.com"
description-file = "README.rst"
home-page = "https://github.com/jcfr/jinja2-github"
requires = [
    "pygithub",
    "jinja2"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git"
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-sugar",
]

[tool.ruff]
select = [
  "ARG",         # flake8-unused-arguments
  "B",           # flake8-bugbear
  "C4",          # flake8-comprehensions
  "E", "F", "W", # flake8
  "EM",          # flake8-errmsg
  "EXE",         # flake8-executable
  "G",           # flake8-logging-format
  "I",           # isort
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "NPY",         # NumPy specific rules
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "S",           # flake8-bandit
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
extend-ignore = [
  "SIM108", # Use the ternary operator if it's reasonable.
]
target-version = "py38"
line-length = 120

[tool.ruff.per-file-ignores]
"test_*.py" = ["S101"]
